# trait_adapters

./: .gitignore  Cargo.toml  README.md  README.tpl
src/: bow.rs  lib.rs
trait_adapters_macros/: Cargo.toml
trait_adapters_macros/src/: isolator.rs  lib.rs
